Recent LWC file updated

--- a/force-app/classes/AccountSearClass.cls
+++ b/force-app/classes/AccountSearClass.cls
@@ -2,7 +2,7 @@ public with sharing class AccountSearClass {
     @AuraEnabled(cacheable = true)
     public static List<Account> searchAccounts(string searchKey){
 
-        string searchVal = '%' + searchkey + '%';
+        string searchVal = '%' + searchKey + '%';
         return [SELECT Id, Name, Phone, Type, Total_Opportunity_Amount__c FROM Account WHERE Name LIKE : searchVal LIMIT 10];
     }
 }
