passparameterimperative LWC Component added

--- a/force-app/classes/AccountSearClass.cls
+++ b/force-app/classes/AccountSearClass.cls
@@ -1,12 +1,9 @@
 public with sharing class AccountSearClass {
 
     @AuraEnabled(cacheable=true)
-    public static List<Account> searchAcc(String searchKey) {
+    public static List<Account> searchAcc(String search) {
 
-    String searchVal = '%' + searchKey + '%';
+    String searchVal = '%' + search + '%';
     return [Select id,name,phone,type,Total_Opportunity_Amount__c from Account where Name LIKE : searchVal];
-
-
-    }
-    
+    }    
 }
